--- a/assets/index.css
+++ b/assets/index.css
@@ -53,9 +53,9 @@
   --space-3xs: 0.125rem;
   --space-2xs: 0.25rem;
   --space-xs: 0.5rem;
-  --space-sm: 0.75rem;
-  --space-md: 1rem;
-  --space-lg: 1.5rem;
+  --space-s: 0.75rem;
+  --space-m: 1rem;
+  --space-l: 1.5rem;
   --space-xl: 2rem;
   --space-2xl: 3rem;
   --space-3xl: 4rem;
@@ -150,7 +150,7 @@ h4,
 h5,
 h6 {
   margin-top: 0;
-  margin-bottom: var(--space-md);
+  margin-bottom: var(--space-m);
   line-height: var(--line-height-heading);
   font-weight: var(--font-weight-bold);
   color: var(--color-text);
@@ -158,7 +158,7 @@ h6 {
 
 h1 {
   font-size: var(--font-size-3xl);
-  margin-bottom: var(--space-lg);
+  margin-bottom: var(--space-l);
 }
 
 h2 {
@@ -173,13 +173,13 @@ h3 {
 
 h4 {
   font-size: var(--font-size-lg);
-  margin-top: var(--space-lg);
+  margin-top: var(--space-l);
 }
 
 h5,
 h6 {
   font-size: var(--font-size-base);
-  margin-top: var(--space-md);
+  margin-top: var(--space-m);
 }
 
 img,
@@ -187,7 +187,7 @@ picture,
 figure {
   width: 100%;
   height: auto;
-  margin: var(--space-md) 0;
+  margin: var(--space-m) 0;
   display: flex;
 }
 
@@ -196,7 +196,7 @@ p {
 }
 
 p+p {
-  margin-top: var(--space-md);
+  margin-top: var(--space-m);
 }
 
 a {
@@ -232,13 +232,13 @@ pre {
   font-size: var(--font-size-sm);
   background-color: var(--color-pre-background);
   color: var(--color-pre-color);
-  padding: var(--space-lg) var(--space-md) var(--space-md) var(--space-md);
+  padding: var(--space-l) var(--space-m) var(--space-m) var(--space-m);
   border-radius: var(--border-radius);
   overflow-x: scroll;
   overflow-y: hidden;
   scrollbar-width: thin;
   scrollbar-color: var(--color-text-dimmed) var(--color-pre-background);
-  margin: var(--space-md) 0;
+  margin: var(--space-m) 0;
 }
 
 pre code {
@@ -249,9 +249,9 @@ pre code {
 
 blockquote {
   border-left: 4px solid var(--color-primary);
-  padding-left: var(--space-md);
+  padding-left: var(--space-m);
   color: var(--color-text-light);
-  margin: var(--space-md) 0 var(--space-md) 0;
+  margin: var(--space-m) 0 var(--space-m) 0;
 }
 
 hr {
@@ -275,7 +275,7 @@ ol li+li {
 
 body>header {
   grid-area: header;
-  padding: var(--space-md) 0;
+  padding: var(--space-m) 0;
 }
 
 /* Main */
@@ -283,7 +283,7 @@ body>header {
 main {
   grid-area: main;
   overflow: hidden;
-  padding: 0 0 var(--space-lg) 0;
+  padding: 0 0 var(--space-l) 0;
 }
 
 /* Sidebar */
@@ -299,7 +299,7 @@ aside {
 
 aside .sidebar {
   position: sticky;
-  top: var(--space-lg);
+  top: var(--space-l);
 }
 
 .sidebar header a {
@@ -342,14 +342,14 @@ aside a+ul {
 aside details {
   margin: 0;
   list-style: none;
-  margin-left: calc(var(--space-md) * -1);
+  margin-left: calc(var(--space-m) * -1);
   padding: 0;
-  padding-left: var(--space-md);
+  padding-left: var(--space-m);
 }
 
 aside details summary {
   list-style: none;
-  margin-left: calc((var(--space-md) + var(--space-2xs)) * -1);
+  margin-left: calc((var(--space-m) + var(--space-2xs)) * -1);
   display: flex;
   gap: var(--space-2xs);
   flex-direction: row-reverse;
@@ -404,7 +404,7 @@ aside details[open] summary::after {
 
 /* Margins */
 .mt-md {
-  margin-top: var(--space-md);
+  margin-top: var(--space-m);
 }
 
 .mt-2xl {
@@ -418,12 +418,12 @@ aside details[open] summary::after {
 /* GitHub-style Alerts */
 
 .alert {
-  padding: var(--space-md);
-  margin: var(--space-lg) 0;
+  padding: var(--space-m);
+  margin: var(--space-l) 0;
   border-radius: var(--border-radius);
   border-left: 4px solid;
   display: flex;
-  gap: var(--space-md);
+  gap: var(--space-m);
   background-color: var(--color-white);
   box-shadow: var(--box-shadow-sm);
 }
@@ -501,7 +501,7 @@ aside details[open] summary::after {
 ul.cards {
   display: flex;
   flex-wrap: wrap;
-  gap: var(--space-sm);
+  gap: var(--space-s);
   margin: 0;
   padding: 0;
   list-style: none;
@@ -516,7 +516,7 @@ ul.cards li {
 
 @media (min-width: 768px) {
   ul.cards li {
-    flex: 1 1 calc(100% / 2 - var(--space-sm));
+    flex: 1 1 calc(100% / 2 - var(--space-s));
   }
 }
 
@@ -524,7 +524,7 @@ ul.cards li {
   display: flex;
   flex-direction: column;
   height: 100%;
-  padding: var(--space-sm);
+  padding: var(--space-s);
   border: 1px solid var(--color-border);
   border-radius: var(--border-radius);
   background-color: var(--color-background);
@@ -537,4 +537,37 @@ ul.cards li {
 
 .card footer {
   margin-top: auto;
+}
+
+/* Table */
+
+table {
+  --color-code-background: var(--color-light);
+  --color-code-color: var(--color-text);
+  background-color: var(--color-white);
+  border: 1px solid var(--color-border);
+  border-collapse: separate;
+  border-spacing: 0;
+  width: 100%;
+  margin-block: var(--space-l);
+}
+
+table thead,
+table tbody {
+  border-collapse: collapse;
+}
+
+table td,
+table th {
+  text-align: left;
+  padding: var(--space-xs);
+  border-bottom: 1px solid var(--color-border);
+}
+
+table th {
+  font-weight: var(--font-weight-bold);
+}
+
+table tr:last-child td {
+  border-bottom: 0;
 }
